k8s/pocketbase/pocketbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbase-deployment
spec:
  replicas: 1

  selector:
    matchLabels:
      app: pocketbase

  template:
    metadata:
      labels:
        app: pocketbase
    spec:
      containers:
        - name: pocketbase
          image: ghcr.io/ysma3/pcpartradar-productservice:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: pocketbase-data
              mountPath: /pb/pb_data
      volumes:
        - name: pocketbase-data
          persistentVolumeClaim:
            claimName: pocketbase-data
