k8s/pocketbase/pocketbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
spec:
  selector:
    app: pocketbase
  ports:
    - port: 8080
      targetPort: 8080
